Ensure report scores aren't squished, for example in the politician cause scores list

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -440,4 +440,5 @@ div.report_score .score {
 
 div.report_score {
     margin-top: 5px;
+    width: 3em;
 }
